# bgp4rs

./: .licensure.yml  Cargo.toml  LICENSE  Readme.md
examples/simple/: confg.yml
src/: main.rs
src/app/: args.rs  mod.rs
src/config_file/: config_file_definition.rs  config_file_provider.rs  mod.rs
src/router_engine/: bgp_packet.rs  local_adress_matcher.rs  main_router_engine.rs  mod.rs  peer_connection_manager.rs
src/shared/: as_number.rs  config_provider.rs  error.rs  local_address_matcher.rs  mod.rs  prelude.rs  router_configuration.rs  router_engine.rs  socket_addr_spec.rs  subsystem.rs
src/shared/bgp/: as_number.rs  mod.rs
src/shared/config/: config_provider.rs  mod.rs  router_configuration.rs
src/shared/network/: local_address_matcher.rs  mod.rs  socket_addr_spec.rs
src/shared/services/: mod.rs  router_engine.rs  subsystem.rs
src/web/: management_api_server.rs  management_server.rs  mod.rs  public_api_server.rs
