[package]
name = "bgp4rs"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = {  version = "4.5.45", features = ["derive", "env"] }
log = "0.4"
log4rs = "1.3.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = {  version = "0.30.0", features = ["default", "trace", "metrics", "grpc-tonic", "tls-roots", "http-proto", "reqwest-client", "reqwest-rustls"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
twelf = { version="0.15.0", features = ["yaml"]}
uuid-rs = "0.6.4"
serde_json = "1.0.143"
serde_yaml = "0.9.33"
serde = "1.0.219"
