# Copyright 2025 Rainer Bieniek <Rainer.Bieniek@cumulus-cloud-consulting.de>
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
#
[package]
name = "bgp4rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
license-file = "LICENSE"

[dependencies]
axum = "0.8.4"
anyhow = "1.0.99"
async-trait = "0.1.89"
byteorder = "1.5.0"
clap = { version = "4.5.45", features = ["derive", "env"] }
log = "0.4"
log4rs = "1.3.0"
network-interface = "2.0.3"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["default", "trace", "metrics", "grpc-tonic", "tls-roots", "http-proto", "reqwest-client", "reqwest-rustls"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
twelf = { version = "0.15.0", features = ["yaml"] }
uuid = { version = "1.18.0", features = ["v4", "v7"] }
serde_json = "1.0.143"
serde_yaml = "0.9.33"
serde = "1.0.219"

[profile.release]
lto = "fat"
opt-level = "s"
